--- a/ui/views/invitations/get_invitation.templ
+++ b/ui/views/invitations/get_invitation.templ
@@ -9,9 +9,9 @@ templ GetInvitation(eventId string) {
 		<h2 class="subtitle">Someone invited you to join an event to help find a present!</h2>
 		<div id="invitation" name="invitation" class="is-flex is-flex-direction-column">
 			<form hx-post={ links.BuildGetInvitationLink(eventId) } hx-target="#content" hx-replace-url={fmt.Sprintf("/events/%s", eventId)} hx-ext="json-enc">
-				<div class="field" x-data="{ username: $persist('') }">
+				<div class="field">
 					<div class="control">
-						<input x-model="username" class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
+						<input class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
 					</div>
 				</div>
 				<div class="field">
