--- a/ui/views/presents/add_present.templ
+++ b/ui/views/presents/add_present.templ
@@ -3,12 +3,9 @@ package presents
 import "github.com/MorrisMorrison/retfig/utils/links"
 
 templ AddPresent(eventId string) {
-	<div id="add-present" name="add-present" class="is-flex is-flex-direction-column box" x-data="{ username: $persist(''), name: '', link: '' }">
+	<div id="add-present" name="add-present" class="is-flex is-flex-direction-column box" x-data="{ name: '', link: '' }">
 		<h2 class="subtitle">Add present recommendations to the list!</h2>
 		<form  hx-post={ links.BuildCreatePresentLink(eventId) } @htmx:after-request="name=''; link = '';"  hx-target="#presentListItems" hx-swap="beforeend" hx-ext="json-enc">
-			<div>
-				<input type="hidden" id="username" name="username" x-model="username"/>
-			</div>
 			<div class="field">
 				<div class="control">
 					<input x-model="name" class="input is-primary" id="name" name="name" type="text" placeholder="Which present do you want to add?" required/>
