--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -9,7 +9,7 @@ import "github.com/MorrisMorrison/retfig/ui/views/votes"
 import "fmt"
 
 templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
-	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ "{showComments: false, username: $persist('')}" }>
+	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ "{showComments: false" }>
 		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
 			<div class="is-flex is-justify-content-space-between is-align-items-center">
 				<div class="is-flex is-align-items-center">
@@ -31,7 +31,6 @@ templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
 						hx-ext="json-enc"
 					>
 						<div class="is-flex is-align-items-baseline">
-							<input type="hidden" id="username" name="username" x-model="username"/>
 							<button
 								class="button is-primary"
 							>
