--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -5,10 +5,12 @@ import "github.com/MorrisMorrison/retfig/utils/links"
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 import "github.com/MorrisMorrison/retfig/ui/views/comments"
 import "github.com/MorrisMorrison/retfig/ui/views/votes"
+import "github.com/MorrisMorrison/retfig/ui/viewcontext"
+
 
 import "fmt"
 
-templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
+templ PresentListItem(ctx *viewcontext.ViewContext, vm *viewmodels.PresentListItemViewModel) {
 	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ "{showComments: false" }>
 		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
 			<div class="is-flex is-justify-content-space-between is-align-items-center">
