--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -2,13 +2,14 @@ package presents
 
 import "github.com/MorrisMorrison/retfig/utils/links"
 
-import "github.com/MorrisMorrison/retfig/ui/viewmodels"
+import "github.com/MorrisMorrison/retfig/ui/viewmodels"	
 import "github.com/MorrisMorrison/retfig/ui/views/comments"
 import "github.com/MorrisMorrison/retfig/ui/views/votes"
 import "github.com/MorrisMorrison/retfig/ui/viewcontext"
 
 
 import "fmt"
+import "github.com/MorrisMorrison/retfig/ui/views/claims"
 
 templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListItemViewModel) {
 	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ "{showComments: false" }>
@@ -22,32 +23,12 @@ templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListIte
 			<div class="is-flex is-justify-content-space-between mt-2">
 				<span>{ vm.Link }</span>
 				<div class="is-flex">
-					<form
-						if (vm.IsClaimed && vm.ClaimedBy == vc.CurrentUser) {
-							hx-delete={ links.BuildClaimPresentLink(vm.EventId, vm.PresentId) }
-						} else {
-							hx-post={ links.BuildClaimPresentLink(vm.EventId, vm.PresentId) }
-						}
-						hx-target={ "#present_" + vm.PresentId }
-						hx-swap="outerHTML"
-						hx-ext="json-enc"
-					>
-						<div class="is-flex is-align-items-baseline">
-							<button
-								class="button is-primary"
-							>
-								<span class="icon">
-									if (vm.IsClaimed && vm.ClaimedBy == vc.CurrentUser) {
-										<i class="fa-solid has-text-warning fa-hand"></i>
-									} else if (vm.IsClaimed && vm.ClaimedBy != vc.CurrentUser) {
-										<i class="fa-solid has-text-danger fa-hand"></i>
-									} else {
-										<i class="fa-regular has-text-light fa-hand"></i>
-									}
-								</span>
-							</button>
-						</div>
-					</form>
+					@claims.ClaimsButton(vc, &viewmodels.ClaimButtonViewModel{
+						EventId: vm.EventId,
+						PresentId: vm.PresentId,
+						ClaimedBy: vm.ClaimedBy,
+						IsClaimed: vm.IsClaimed,
+					})
 					@votes.VoteButtons(&viewmodels.VoteButtonsViewModel{
 						EventId: vm.EventId,
 						PresentId: vm.PresentId,
