properly update ui depending on user upvoted, downvoted or hasnt voted yet

--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -35,8 +35,8 @@ templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListIte
 						UpvoteCount: vm.UpvoteCount,
 						DownvoteCount: vm.DownvoteCount,
 						CreatedBy: vm.CreatedBy, 
-						IsUpvotedByUser: true,
-						IsDownvotedByUser: false,
+						IsUpvotedByUser: vm.IsUpvotedByUser,
+						IsDownvotedByUser: vm.IsDownvotedByUser,
 					})
 					<div class="is-flex is-align-items-baseline">
 						<span class="has-text-light">{ fmt.Sprint(vm.CommentCount) }</span>
