fix creating participants

--- a/ui/views/invitations/get_invitation.templ
+++ b/ui/views/invitations/get_invitation.templ
@@ -8,7 +8,7 @@ templ GetInvitation(eventId string) {
 		<h1 class="title"><i class="fa-solid fa-gift"></i> Event Invitation</h1>
 		<h2 class="subtitle">Someone invited you to join an event to help find a present!</h2>
 		<div id="invitation" name="invitation" class="is-flex is-flex-direction-column">
-			<form hx-post={ links.BuildGetInvitationLink(eventId) } hx-target="#content" hx-replace-url={fmt.Sprintf("/events/%s", eventId)} hx-ext="json-enc">
+			<form hx-post={ links.BuildCreateParticipantLink(eventId) } hx-target="#content" hx-replace-url={fmt.Sprintf("/events/%s", eventId)} hx-ext="json-enc">
 				<div class="field">
 					<div class="control">
 						<input class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
