fix x-data attribute for comment toggle

--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -12,7 +12,7 @@ import "fmt"
 import "github.com/MorrisMorrison/retfig/ui/views/claims"
 
 templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListItemViewModel) {
-	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ "{showComments: false" }>
+	<div id={ "present_" + vm.PresentId } class="mb-4" x-data="{showComments: false}">
 		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
 			<div class="is-flex is-justify-content-space-between is-align-items-center">
 				<div class="is-flex is-align-items-center">
