--- a/ui/views/claims/claim_button.templ
+++ b/ui/views/claims/claim_button.templ
@@ -59,7 +59,7 @@ templ UnclaimedButton(vm *viewmodels.ClaimButtonViewModel) {
 	>
 		<div class="is-flex is-align-items-baseline">
 			<button
-				class="button is-link"
+				class="button is-primary"
 			>
 				<span class="icon">
 					<i class="fa-regular has-text-light fa-hand"></i>
