adust styling of present action buttons

--- a/ui/views/claims/claim_button.templ
+++ b/ui/views/claims/claim_button.templ
@@ -59,10 +59,10 @@ templ UnclaimedButton(vm *viewmodels.ClaimButtonViewModel) {
 	>
 		<div class="is-flex is-align-items-baseline">
 			<button
-				class="button is-primary"
+				class="button is-primary is-inverted"
 			>
 				<span class="icon">
-					<i class="fa-regular has-text-light fa-hand"></i>
+					<i class="fa-regular fa-hand"></i>
 				</span>
 				<span class="has-text-light">Claim</span>
 			</button>
