--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -22,7 +22,7 @@ templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListIte
 			<div class="is-flex is-justify-content-space-between mt-2">
 				<span>{ vm.Link }</span>
 				<div class="is-flex" style="gap: 4px">
-					<div class="is-flex has-background-primary p-0 box is-shadowless">
+					<div class="is-flex has-background-primary-05 p-0 box is-shadowless">
 						@votes.VoteButtons(&viewmodels.VoteButtonsViewModel{
 						EventId: vm.EventId,
 						PresentId: vm.PresentId,
@@ -35,14 +35,14 @@ templ PresentListItem(vc *viewcontext.ViewContext, vm *viewmodels.PresentListIte
 						<div class="is-flex is-align-items-baseline">
 							<button
 								@click="showComments = !showComments"
-								class="button is-primary pr-3 pl-3"
+								class="button is-primary is-inverted pr-3 pl-3"
 								hx-get={ links.BuildGetCommentsLink(vm.EventId, vm.PresentId) }
 								hx-target={ "#comments_" + vm.PresentId }
 								hx-swap="outerHTML"
 								hx-ext="json-enc"
 							>
 								<span class="icon">
-									<i :class="{ 'fa-solid': showComments, 'fa-regular': !showComments}" class="fa-comments has-text-light"></i>
+									<i :class="{ 'fa-solid': showComments, 'fa-regular': !showComments}" class="fa-comments"></i>
 								</span>
 								<span class="has-text-light">
 									{ fmt.Sprint(vm.CommentCount) }
