--- a/ui/views/votes/vote_button.templ
+++ b/ui/views/votes/vote_button.templ
@@ -10,7 +10,7 @@ templ VoteButton(vm *viewmodels.VoteButtonViewModel) {
 	<div class="is-flex is-align-items-baseline">
 		<button
 			type="button"
-			class="button is-primary pr-3 pl-3"
+			class="button is-primary is-inverted pr-3 pl-3"
 			hx-post={ links.BuildCreateVoteLink(vm.EventId, vm.PresentId) }
 			hx-trigger="click"
 			hx-target={ "#voteButtons_" + vm.PresentId }
@@ -21,15 +21,15 @@ templ VoteButton(vm *viewmodels.VoteButtonViewModel) {
 			<span class="icon">
 				if vm.VoteType == "UPVOTE" {
 					if vm.IsVotedByUser {
-						<i class="fa-solid fa-thumbs-up has-text-light"></i>
+						<i class="fa-solid fa-thumbs-up"></i>
 					} else {
-						<i class="fa-regular fa-thumbs-up has-text-light"></i>
+						<i class="fa-regular fa-thumbs-up"></i>
 					}
 				} else {
 					if vm.IsVotedByUser {
-						<i class="fa-solid fa-thumbs-down has-text-light"></i>
+						<i class="fa-solid fa-thumbs-down"></i>
 					} else {
-						<i class="fa-regular fa-thumbs-down has-text-light"></i>
+						<i class="fa-regular fa-thumbs-down"></i>
 					}
 				}
 			</span>
